--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body{
   font-family: "Inter", sans-serif;
   max-width: 1200px;
   margin: 0 auto;
+  background-color: #f5f5f5;
 }
 
 div a.active {
